fix: use correct github token on checkout
Signed-off-by: Johan Enell <johan.enell@qlik.com>

--- a/actions/setup/action.yaml
+++ b/actions/setup/action.yaml
@@ -26,6 +26,7 @@ runs:
       with:
         ref: ${{ inputs.ref }}
         fetch-depth: 0
+        token: ${{ inputs.GH_ACCESS_TOKEN }}
 
     - name: Setup .npmrc
       if: inputs.NPMRC_ENCODED != null
