--- a/actions/scan-packages/action.yaml
+++ b/actions/scan-packages/action.yaml
@@ -36,7 +36,7 @@ runs:
       run: |
         repos=$(pnpm -r exec pwd)
         matrixEntries=""
-
+        echo $repos
         for item in $repos; do
           cd $item
           name=$(cat package.json | jq -r '.name')
