test: fix check

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -37,7 +37,7 @@ jobs:
 
       - name: Test if strategy is correct
         run: |
-          if ${{ contains(fromJSON(steps.scan.outputs.strategy), 'fail-fast' ) }}; then
+          if ${{ steps.scan.outputs.strategy == "{ \"fail-fast\": false, \"matrix\": {\"include\": [{ \"package\": \"sn-test\", \"folder\": \"/home/runner/work/sn-gh-workflows/sn-gh-workflows\", \"systemjs\": \"null\" }] }}" }}; then
             exit 0
           fi
           echo "::error::Strategy is not as expected"
