--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -151,7 +151,7 @@ jobs:
     name: ${{ matrix.package }}
     strategy: ${{fromJSON(needs.read_package.outputs.strategy)}}
     steps:
-      - if: ${{ matrix.systemjs != 'null' && GITHUB_REPOSITORY_OWNER == 'qlik-trial' }}
+      - if: ${{ matrix.systemjs != 'null' && env.GITHUB_REPOSITORY_OWNER == 'qlik-trial' }}
         name: Upload dev build
         uses: qlik-oss/sn-gh-workflows/actions/dev-build@dvr/upload-devbuilds
         with:
